Fixed z-index in active pagination item

--- a/Js/Backend/Assets/styles/sass/components/elements.scss
+++ b/Js/Backend/Assets/styles/sass/components/elements.scss
@@ -355,6 +355,7 @@
       -moz-border-radius: 3px;
       border-radius: 3px;
       color: #fa5722;
+      z-index: inherit;
       &:hover {
         background: #ECECEC;
         -webkit-border-radius: 3px;
